# zksvm

./: Cargo.toml
onchain_verifier/programs/onchain_verifier/: Cargo.toml
proof_risc0_verifier/programs/proof_risc0_verifier/: Cargo.toml
rollup_client/: Cargo.toml
rollup_core/: Cargo.toml
rollup_core/src/: frontend.rs  main.rs  rollupdb.rs  sequencer.rs  settle.rs
rollup_web/app/: page.tsx
rollup_web/components/: transaction-creator.tsx
rollup_web/lib/: api.ts
rust-prover/: Cargo.toml
