[workspace]
members = [
    "rust-prover",
    "onchain_verifier/programs/onchain_verifier/",
    "proof_risc0_verifier/programs/proof_risc0_verifier/",
    "rollup_core",
    "rollup_client"
]
resolver = "2"


[workspace.dependencies]
anchor-lang = "0.31.1"
anyhow = { version = "1.0.95" }
ark-std = { version = "0.5", features = ["std"] }
ark-ff = "0.5"
ark-bn254 = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-groth16 = "0.5"
ark-snark = "0.5"
rand = "0.9.2"
ark-serialize = "0.5"
#serde_json = "1.0.127"
#serde = { version = "1.0.209", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
ark-ec = "0.5"
hex-literal = "0.4.1"
solana-bn254 = "3.0.0"
solana-alt-bn128-bls = "0.1.0"
num-bigint = "0.4.6"
risc0-zkvm = { version = "1.2.0", default-features = false}
actix-web = "4.9.0"
tokio = {version = "1", features = ["full"]}
solana-svm = "2.0.7"
solana-program-runtime = "2.0.7"
solana-sdk = "2.0.7"
solana-client = "2.0.7"
solana-compute-budget = "2.0.7"
solana-bpf-loader-program = "2.0.7"
env_logger = "0.11.8"
log = "0.4.22"
crossbeam = "0.8.4"
async-channel = "2.5.0"
solana-svm-feature-set= "2.3.6"
solana-svm-callback = "2.3.6"
solana-system-program = "2.3.6"
solana-fee-structure = "2.3.0"
solana-sdk-ids = "2.2.1"
solana-system-interface = "2.0.0"
dotenvy = "0.15"
tokio-util = "0.7"
reqwest = { version = "0.12.4", features = ["json"] }
solana-transaction-status = "2.0.8"
bincode = "1.3.3"
tokio-test = "0.4"
tempfile = "3.8"