[package]
name = "rollup_client"
version = "0.1.0"
edition = "2021"
authors = [ "bergabman bergabman1@gmail.com" ]

[dependencies]
reqwest = {workspace = true}
tokio = {workspace = true}
solana-sdk = {workspace = true}
solana-client = {workspace = true}
solana-transaction-status = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
bincode = {workspace = true}
rollup_core = { path = "../rollup_core" }
dotenvy = {workspace = true}
solana-system-interface = {workspace = true}

[dev-dependencies]
tokio-test = {workspace = true}
tempfile = {workspace = true}
