[package]
name = "rollup_core"
version = "0.1.0"
edition = "2021"
authors = [ "bheeeet", "swinecoder101", "donjne", "moses7054", "jeevan4476" ]

[dependencies]
actix-web = {workspace = true}
actix-cors = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
solana-svm = {workspace = true}
solana-program-runtime = {workspace = true}
solana-sdk = {workspace = true}
solana-client = {workspace = true}
solana-compute-budget = {workspace = true}
solana-bpf-loader-program = {workspace = true}
env_logger = {workspace = true}
log = {workspace = true}
anyhow = {workspace = true}
crossbeam = {workspace = true}
async-channel = {workspace = true}
solana-svm-feature-set= {workspace = true}
solana-svm-callback = {workspace = true}
solana-system-program = {workspace = true}
solana-fee-structure = {workspace = true}
solana-sdk-ids = {workspace = true}
solana-system-interface = {workspace = true}
zelana-verifier = {workspace = true}
dotenvy = {workspace = true}
tokio-util = {workspace = true}
num-bigint = {workspace = true}
anchor-lang = {workspace = true}