[package]
name = "rust-prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snarkjs"
path = "src/snarkjs.rs"

[dependencies]
ark-std = {workspace = true}
ark-ff = {workspace = true}
ark-bn254 = {workspace = true}
ark-relations = {workspace = true}
ark-r1cs-std = {workspace = true}
ark-groth16 = {workspace = true}
ark-snark = {workspace = true}
rand = {workspace = true}
ark-serialize = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
base64 = {workspace = true}
ark-ec = {workspace = true}

