[package]
name = "proof_risc0_verifier"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_risc0_verifier"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
client = ["dep:risc0-zkvm", "dep:anyhow", "dep:ark-serialize", "dep:ark-bn254", "dep:num-bigint", "dep:serde"]
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = {workspace = true}
anyhow = { workspace = true, optional = true }
ark-bn254 = { version = "0.4.0", optional = true }
ark-serialize = { version = "0.4.2", optional = true }
hex-literal =  {workspace = true}
num-bigint = {workspace = true  , optional = true }
risc0-zkvm = { workspace  =true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
solana-alt-bn128-bls = {workspace = true}
solana-bn254 = {workspace = true}

[dev-dependencies]
anyhow = {workspace = true}
ark-bn254 = "0.4.0"
ark-serialize = "0.4.2"
num-bigint = {workspace = true}
risc0-zkvm = { version = "1.2.0", default-features = false }
serde = {workspace = true }
serde_json ={workspace = true}

